# document-locator

./: .env.example  .env.sample  .gitignore  AGENTS.md  Makefile  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
app/: __init__.py  logging.py
docs/: Concept.md  Concept2.md  Design.md  Diagrams.md  Plan.md  Requirements.md  mcp_migration.md
scripts/: README.md  db-apply.d.mts  db-apply.mjs  migrate.py  smoke-openai.ts  test-runner.mjs
sql/: 001_drive_file_index.sql  002_drive_sync_state.sql  003_match_drive_file_index.sql  004_drive_hybrid_score.sql  005_match_drive_file_index_cleanup.sql  006_match_drive_file_index_vec_similarity_fix.sql  007_match_drive_file_index_casts.sql
src/: cli.ts  clients.ts  crawler.ts  drive.ts  drive_file_index_repository.ts  drive_sync_state_repository.ts  env.ts  files-supabase.ts  files.ts  http.ts  index.ts  logger.ts  mime.ts  openai-provider.ts  openai.ts  search.ts  supabase.ts  text_extraction.ts  time.ts
test/: cli-env-loader.test.js  cli-env-validation.test.js  cli-help.test.js  cli-logging-levels.test.js  cli-shared-logger.test.js  cli-supabase-connection-error.test.js  cli-supabase-connection.test.js  cli.test.js  env-loader.test.js  files-logical-delete.test.js  files-upsert.test.js  files-vector-search.test.js  supabase-migrations.test.js
tests/: ai_pipeline.test.ts  cli_crawler.test.ts  cli_search.test.ts  clients.test.ts  conftest.py  crawler_e2e.test.ts  crawler_interrupt.test.ts  crawler_mode_resolution.test.ts  crawler_summary.test.ts  env.test.ts  pg.d.ts  (+31 more)
(+42 files in other folders)
