[project]
name = "document-locator"
version = "0.1.0"
description = "Developer tooling baseline for the document-locator project."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Proprietary"}
authors = [{ name = "document-locator developers" }]
dependencies = []

[project.scripts]
gdrive-indexer = "app.cli.indexer:main"
gdrive-search = "app.cli.search:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
src = ["app", "tests"]
exclude = ["docs"]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = "\\.pyi?$"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = [
    "tests",
]
